Bug 1487101 - Do not interrupt purging of HTTP cache entries from memory by frecency until the pool containts at most 2000 entries, r=michal,necko-reviewers

Differential Revision: https://phabricator.services.mozilla.com/D80180